--- a/packages/dropdown/package.json
+++ b/packages/dropdown/package.json
@@ -1,13 +1,15 @@
 {
   "name": "@reactjs-os/dropdown",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "MacOS inspired React dropdown components",
   "main": "dist/index.js",
   "module": "dist/index.js",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "babel src -d dist --copy-files"
+    "build": "babel src -d dist --copy-files --root-mode upward"
   },
   "keywords": [
     "dropdown",
@@ -20,9 +22,7 @@
     "react": "^17.0.0 || ^18.0.0 || ^19.0.0",
     "react-dom": "^17.0.0 || ^18.0.0 || ^19.0.0"
   },
-  "devDependencies": {
-    "@babel/cli": "^7.27.0",
-    "@babel/preset-env": "^7.26.9",
-    "@babel/preset-react": "^7.26.3"
+  "dependencies": {
+    "@reactjs-os/shared": "^1.0.0"
   }
 }
